--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ play {
     serviceAccountCredentials = file('key.p12')
     defaultToAppBundles = false
     track = 'alpha'
+    updatePriority = 0
 }
 
 ext {
@@ -187,6 +188,7 @@ dependencies {
     playImplementation "com.google.firebase:firebase-inappmessaging-ktx:19.1.0"
     playImplementation 'com.google.firebase:firebase-messaging:20.2.3'
     playImplementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    playImplementation 'com.google.android.play:core-ktx:1.8.0'
     playImplementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 
     releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:$chucker"
